[ css / align / opinions ] - fix up alignment css bug - add opinions for   - headings   - links   - body font

--- a/src/components/text/_align.scss
+++ b/src/components/text/_align.scss
@@ -2,13 +2,13 @@
 $text-align-prop: $text-prop !default;
 $text-aligns: (
 
-    l:      "left",
-    r:      "right",
-    c:      "center",
-    j:      "justify",
-    ja:     "justify-all",
-    s:      "start",
-    e:      "end",
+    l:      left,
+    r:      right,
+    c:      center,
+    j:      justify,
+    ja:     justify-all,
+    s:      start,
+    e:      end,
 
 ) !default;
 
