--- a/src/eezo.scss
+++ b/src/eezo.scss
@@ -15,6 +15,7 @@
 
     @include opinions();
     @include clears();
+    @include headings();
     @include links();
     @include visibility();
 
