--- a/src/opinions/__base.scss
+++ b/src/opinions/__base.scss
@@ -18,9 +18,7 @@
     html,
     body {
 
-        height: 100%;
-        margin: 0;
-        padding: 0;
+        font-family: $font-serif;
 
     }
 
